--- a/package.yaml
+++ b/package.yaml
@@ -44,8 +44,8 @@ tests:
     - cryptonite >= 0.26
     - directory >= 1.3.6.0 && < 1.4
     - filepath >= 1.4.2.1 && < 1.5
-    - QuickCheck >= 2.13.2 && < 2.14
-    - streamly-archive == 0.0.1
+    - QuickCheck >= 2.13.2 && < 2.15
+    - streamly-archive
     - tar >= 0.5.1.1 && < 0.6
     - tasty >= 1.2.3 && < 1.3
     - tasty-hunit >= 0.10.0.2 && < 0.11
