--- a/streamly-archive.cabal
+++ b/streamly-archive.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4b509e0278c8cbc646eb597d841608e9441c7fb5cb95526f6e89409da7e54cdc
+-- hash: 9ed3c3ac2878579ba257a67c7ff5b90fccb05aa2cca886edc9205ae1e0fa5995
 
 name:           streamly-archive
 version:        0.0.1
@@ -42,8 +42,8 @@ library
       archive
   build-depends:
       base >=4.7 && <5
-    , bytestring >=0.10 && <0.11
-    , streamly >=0.7 && <0.8
+    , bytestring ==0.10.*
+    , streamly ==0.7.*
   default-language: Haskell2010
 
 test-suite streamly-archive-test
@@ -60,16 +60,16 @@ test-suite streamly-archive-test
   build-depends:
       QuickCheck >=2.13.2 && <2.15
     , base >=4.7 && <5
-    , bytestring >=0.10 && <0.11
+    , bytestring ==0.10.*
     , cryptonite >=0.26
     , directory >=1.3.6.0 && <1.4
     , filepath >=1.4.2.1 && <1.5
-    , streamly >=0.7 && <0.8
+    , streamly ==0.7.*
     , streamly-archive
     , tar >=0.5.1.1 && <0.6
     , tasty >=1.2.3 && <1.3
     , tasty-hunit >=0.10.0.2 && <0.11
     , tasty-quickcheck >=0.10.1.1 && <0.11
-    , temporary >=1.3 && <1.4
+    , temporary ==1.3.*
     , zlib >=0.6.2.1 && <0.7
   default-language: Haskell2010
