--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.ghc }}-
       - run: cabal v2-build $CONFIG
-      - run: cabal v2-test $CONFIG
+      - run: cabal v2-test $CONFIG --test-show-details=streaming --test-options='--quickcheck-tests 10000'
       - run: cabal v2-haddock $CONFIG
       - run: cabal v2-sdist
