--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,10 @@ on:
       - synchronize
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: ["ubuntu-18.04", "ubuntu-20.04", "macos-10.15"]
         cabal: ["3.4"]
         ghc: ["8.8.4", "8.10.4"]
       fail-fast: false
@@ -25,6 +26,9 @@ jobs:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: ${{ matrix.cabal }}
       - run: sudo apt-get install libarchive-dev
+        if: contains(matrix.os, 'ubuntu')
+      - run: brew install libarchive
+        if: contains(matrix.os, 'macos')
       - run: cabal v2-update
       - run: cabal v2-freeze $CONFIG
       - uses: actions/cache@v2.1.3
@@ -32,9 +36,9 @@ jobs:
           path: |
             ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
             dist-newstyle
-          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
+          key: ${{ matrix.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
           restore-keys: |
-            ${{ runner.os }}-${{ matrix.ghc }}-
+            ${{ matrix.os }}-${{ matrix.ghc }}-
       - run: cabal v2-build $CONFIG
       - run: cabal v2-test $CONFIG --test-show-details=streaming --test-options='--quickcheck-tests 10000'
       - run: cabal v2-haddock $CONFIG
