--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,8 +7,12 @@ on:
     types:
       - opened
       - synchronize
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
   schedule:
-    - cron: '15 2 * * 6' # At 02:15 on Saturday.
+    - cron: '15 2 1 * *' # At 02:15 on day-of-month 1.
 jobs:
   cabal:
     runs-on: ${{ matrix.os }}
