--- a/streamly-archive.cabal
+++ b/streamly-archive.cabal
@@ -8,7 +8,7 @@ homepage:       https://github.com/shlok/streamly-archive#readme
 bug-reports:    https://github.com/shlok/streamly-archive/issues
 author:         Shlok Datye
 maintainer:     sd-haskell@quant.is
-copyright:      2023 Shlok Datye
+copyright:      2024 Shlok Datye
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
@@ -37,17 +37,18 @@ library
       archive
   build-depends:
       base >=4.7 && <5
-    , bytestring ==0.11.*
-    , streamly ==0.9.*
-    , streamly-core ==0.1.*
+    , bytestring >=0.10.10.0 && <0.12
+    , streamly >=0.10.0 && <0.11
+    , streamly-core >=0.2.0 && <0.3
   default-language: Haskell2010
 
 test-suite streamly-archive-test
   type: exitcode-stdio-1.0
   main-is: TestSuite.hs
   other-modules:
-      Streamly.External.Archive.Tests
+      ReadmeMain
       Paths_streamly_archive
+      Streamly.External.Archive.Tests
   autogen-modules:
       Paths_streamly_archive
   hs-source-dirs:
@@ -56,19 +57,19 @@ test-suite streamly-archive-test
   extra-libraries:
       archive
   build-depends:
-      QuickCheck >=2.13.2 && <2.15
-    , base >=4.7 && <5
-    , bytestring ==0.11.*
+      base >=4.7 && <5
+    , bytestring >=0.10.10.0 && <0.12
     , cryptonite >=0.26
-    , directory >=1.3.6.0 && <1.4
+    , directory >=1.3.1 && <1.4
     , filepath >=1.4.2.1 && <1.5
-    , streamly ==0.9.*
-    , streamly-core ==0.1.*
+    , QuickCheck >=2.13.2 && <2.15
+    , streamly >=0.10.0 && <0.11
     , streamly-archive
+    , streamly-core >=0.2.0 && <0.3
     , tar >=0.5.1.1 && <0.6
     , tasty >=1.2.3 && <1.5
     , tasty-hunit >=0.10.0.2 && <0.11
     , tasty-quickcheck >=0.10.1.1 && <0.11
-    , temporary ==1.3.*
+    , temporary >=1.3 && <1.4
     , zlib >=0.6.2.1 && <0.7
   default-language: Haskell2010
