--- a/streamly-archive.cabal
+++ b/streamly-archive.cabal
@@ -57,7 +57,8 @@ test-suite streamly-archive-test
   extra-libraries:
       archive
   build-depends:
-      base >=4.7 && <5
+      async >=2.2.2 && <2.3
+    , base >=4.7 && <5
     , bytestring >=0.10.10.0 && <0.12
     , cryptonite >=0.26
     , directory >=1.3.1 && <1.4
@@ -68,7 +69,6 @@ test-suite streamly-archive-test
     , streamly-core >=0.2.0 && <0.3
     , tar >=0.5.1.1 && <0.6
     , tasty >=1.2.3 && <1.5
-    , tasty-hunit >=0.10.0.2 && <0.11
     , tasty-quickcheck >=0.10.1.1 && <0.11
     , temporary >=1.3 && <1.4
     , zlib >=0.6.2.1 && <0.7
