--- a/streamly-archive.cabal
+++ b/streamly-archive.cabal
@@ -60,6 +60,7 @@ test-suite streamly-archive-test
       async >=2.2.2 && <2.3
     , base >=4.7 && <5
     , bytestring >=0.10.10.0 && <0.12
+    , containers >=0.6.2.1 && <0.8
     , cryptonite >=0.26
     , directory >=1.3.1 && <1.4
     , filepath >=1.4.2.1 && <1.5
