--- a/streamly-archive.cabal
+++ b/streamly-archive.cabal
@@ -38,6 +38,7 @@ library
   build-depends:
       base >=4.7 && <5
     , bytestring >=0.10.10.0 && <0.12
+    , containers >=0.6.2.1 && <0.8
     , streamly >=0.10.0 && <0.11
     , streamly-core >=0.2.0 && <0.3
   default-language: Haskell2010
@@ -65,6 +66,7 @@ test-suite streamly-archive-test
     , directory >=1.3.1 && <1.4
     , filepath >=1.4.2.1 && <1.5
     , QuickCheck >=2.13.2 && <2.15
+    , split >=0.2.3.5 && <0.3
     , streamly >=0.10.0 && <0.11
     , streamly-archive
     , streamly-core >=0.2.0 && <0.3
