--- a/streamly-archive.cabal
+++ b/streamly-archive.cabal
@@ -72,6 +72,7 @@ test-suite streamly-archive-test
     , streamly-core >=0.2.0 && <0.3
     , tar >=0.5.1.1 && <0.6
     , tasty >=1.2.3 && <1.5
+    , tasty-hunit >=0.10.1 && <0.11
     , tasty-quickcheck >=0.10.1.1 && <0.11
     , temporary >=1.3 && <1.4
     , zlib >=0.6.2.1 && <0.7
